--- a/API/.env
+++ b/API/.env
@@ -1,5 +1,13 @@
 PORT=3200
-HOST=localhost
-DB_USER=root
-DB=aquarisma 
+HOST=bo0uciru9sotb9kk5dpe-mysql.services.clever-cloud.com
+DB_USER=utficvckiwrwp4ia
+DB=bo0uciru9sotb9kk5dpe
 PASS_SEGURA=17071983
+PASS=MEMJ6k2CV8Hoh0foLafW
+
+
+#PORT=3200
+#HOST=localhost
+#DB_USER=root
+#DB=aquarisma 
+#PASS_SEGURA=17071983  
